# echo

./: .env.example  .gitignore  COMPLETE_IMPLEMENTATION_SUMMARY.md  Caddyfile  ECHO_GPT_PROGRESS.md  Echo_Desktop.md  Echo_review.md  How_Start_app.md  IMPLEMENTATION_SUMMARY.md  Review.md  Review3.md  Review4.md  Testing 2.md  Testing desktop_push.md  docker-compose.yml  eslint.config.mjs  handoff.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  v.1.0_progress.md  verify.md
.github/workflows/: ci.yml  desktop-build.yml
Echo_Architecture_Pack_v2/: 01_System_Architecture.md  02_Echo_Desktop.md  03_Echo_Companion.md  04_Echo_Web_Portal.md  05_Echo_Cloud_API.md  06_Echo_AI_Gateway.md  07_Device_Pairing.md  08_WebSocket_Protocol.md  09_Database_Design.md  10_API_Specification.md  11_UI_UX_Specification.md  12_Development_Roadmap.md  Updated_Features.md
Echo_Project_Documentation/: Echo_AI_Gateway.md  Echo_Cloud_API_Laravel_12.md
apps/ai-gateway/: .dockerignore  .env.example  Dockerfile  package.json  tsconfig.json
apps/cloud-api/: .dockerignore  .env.example  Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/companion/: README.md  pubspec.yaml
apps/desktop/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: audio.rs  lib.rs  main.rs  screenshot.rs  transcribe.rs  whisper.rs
apps/web-portal/: .env.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
(+197 files in other folders)
