[package]
name = "echo-gpt"
version = "0.1.0"
edition = "2021"
description = "Echo GPT Desktop"

[package.metadata]

[lib]
name = "echo_gpt_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
screenshots = "0.8"
image = "0.25"
chrono = "0.4"
dirs = "5"
local-ip-address = "0.6.13"
windows = { version = "0.61", features = [
    "Media_Devices",
    "Win32_Media_Audio",
    "Win32_Foundation",
    "Win32_System_Com",
] }
